# webengine-spv

./: .gitignore  ChangeLog  Makefile.am  README.rst  admin.py  configure.ac  forms.py  models.py  services.py  urls.py  views.py
data/: Makefile.am  spv-db-schema.dia  spv-dbuser.sql  spv-schema-update-0.10.1.sql  spv-schema.sql  spv-webengine.sql  test.py
debian/: changelog  control  rules  sjconf-webengine-spv.install  sjconf-webengine-spv.postinst  sjconf-webengine-spv.prerm  webengine-spv-data.install  webengine-spv.install
doc/: Makefile.am  webengine-spv-services.t2t  webengine-spv.conf.t2t
etc/: Makefile.am  webengine-spv.conf
locale/: Makefile.am
locale/en/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
medias/css/: Makefile.am  spv.css  statusdetails.css
medias/img/: Makefile.am
medias/js/: Makefile.am  spv.js
sjconf/: Makefile.am
sjconf/confs/: Makefile.am  webengine-spv.conf
sjconf/doc/: Makefile.am  sjconf-webengine-spv.t2t
sjconf/plugins/: webengine-spv.py.in
sjconf/templates/: Makefile.am
sjconf/templates/webengine-spv/: webengine-spv.conf
templates/: Makefile.am  index.html  statusdetails.html
tests/: test_service.py  test_service_get_checks.py  test_service_get_status.py
